manifests-repo/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-cicd-app
  labels:
    app.kubernetes.io/name: sample-cicd-app
    app.kubernetes.io/part-of: sample-cicd-app
