manifests-repo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: smart-mobility-backend
spec:
  type: ClusterIP
  selector:
    app: smart-mobility-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
