manifests-repo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: smart-mobility-dashboard
  labels:
    app: smart-mobility-backend
spec:
  to:
    kind: Service
    name: backend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
